# nmqn

./: .gitignore  README.md  pyproject.toml  sample.yaml
nmqn/: main.py
nmqn/_common/: config.py  path.py
nmqn/compare/: __init__.py  _view.py
nmqn/compare/templetes/: report.tpl.md  top.tpl.md
nmqn/crawl/: __init__.py  _config.py  _crawler.py  _parser.py
nmqn/lib/: crawler.py
output/: output.html  test.md
tests/: test_nmqn.py
